@@ -1,6 +1,10 @@
+drkns 29.06.2020 20:22:06 +0100 - build 5629
+
+1. Извлечение CD при включенной опции Panel.RememberLogicalDrives приводило к забавным эффектам.
+
 drkns 27.06.2020 15:01:02 +0100 - build 5628
 
-1. Уточнение 5628.
+1. Уточнение 5627.
 
 drkns 26.06.2020 22:44:22 +0100 - build 5627
 
